# sales-deck

./: Dockerfile  deploy.sh  pyproject.toml
knowledge_base/: 01_field_ontology.csv  02_header_synonyms.csv  03_disambiguation_rules.csv  04_precedence_rules.csv  05_anti_patterns.csv  06_must_not_mis_map.csv  07_scope_overrides.csv  README.md  action_type_validation_rules.json  bq_validations_catalog.json  facility-roster-system-fields.json  healthcare_domain_knowledge.md  platform_accepted_values.json  platform_api_schemas.json  reference_data.json  roster-system-fields.json  schema_field_rules.json  system_business_logic.md  transaction_type_business_logic.json  transforms_catalog.json
src/universal_roster_v2/: __init__.py  config.py
src/universal_roster_v2/app/: __init__.py  cli.py
src/universal_roster_v2/core/: __init__.py  business_rules.py  chat_custom_actions.py  codegen.py  conversation_store.py  forward_mapping.py  learning_episodes.py  learning_kb.py  learning_retrieval.py  mapping.py  output_builder.py  plan.py  preprocessing_pipeline.py  profile.py  quality_audit.py  quality_audit_enrichment.py  reference_clients.py  runtime_validations.py  schema.py  schema_parser.py  session.py  trainer.py  training_export.py  transforms.py  validations.py
src/universal_roster_v2/llm/: __init__.py  gemini_provider.py  knowledge_loader.py  providers.py  rate_limit.py  router.py
src/universal_roster_v2/schemas/: facility-roster-system-fields.json  practitioner-roster-system-fields.json
workspace/: Full Provider Roster test_universal_plan.json
(+46 files in other folders)
